--- a/demo/demo1.ini
+++ b/demo/demo1.ini
@@ -81,7 +81,7 @@ perlin=1,0.2,1
 
 [cone1]
 type=cone
-rotation=0,-0.7,0
+rotation=0.2,0,0
 angle=0.25
-position=10,0,15
+position=15,0,10
 color=255,255,0
